--- a/HelloWorldGradleDockerized/build.gradle
+++ b/HelloWorldGradleDockerized/build.gradle
@@ -14,6 +14,7 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
@@ -34,22 +35,44 @@ dependencies {
 }
 
 
-buildscript {
-    ...
-    dependencies {
-        ...
-        classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0')
-    }
-}
-
 group = 'com.privalia'
 
-...
-apply plugin: 'com.palantir.docker'
+buildscript {
+  ext {
+    springBootVersion = '1.3.0.RELEASE'
+  }
+  repositories {
+    mavenCentral()
+  }
+  dependencies {
+    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    classpath "se.transmode.gradle:gradle-docker:1.2"
+  }
+}
+apply plugin : 'java'
 
-docker {
-    dependsOn build
-    name "${project.group}/${HelloWorldGradleDockerized}"
-    files bootJar.archivePath
-    buildArgs(['JAR_FILE': "${bootJar.archiveName}"])
+apply plugin: 'docker'
+
+
+task buildDocker(type: Docker) {
+  baseImage = 'mesturrica/gradle_firsttry'
+  push = project.hasProperty('push')
+  tag = 'mesturrica/calculator'
+  addFile {
+    from jar
+    rename {'app.jar'}
+  }
+  entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-jar', '/app.jar'])
+ 
+}
+
+buildDocker.dependsOn(build)
+
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.privalia.principal.Main'
+        )
+    }
 }
